--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pack/mason.nvim/start"]
 	path = pack/mason.nvim/start
 	url = https://github.com/williamboman/mason.nvim
+[submodule "pack/telescope.nvim/start"]
+	path = pack/telescope.nvim/start
+	url = https://github.com/nvim-telescope/telescope.nvim
