--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pack/start/mason.nvim"]
 	path = pack/start/mason.nvim
 	url = https://github.com/williamboman/mason.nvim
+[submodule "pack/start/telescope.nvim"]
+	path = pack/start/telescope.nvim
+	url = https://github.com/nvim-telescope/telescope.nvim
